nlp/nlp-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fabricnlp 
  labels:
    ns: fabricnlp
