nlp/nlp-mysql-client.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysqlclient
  namespace: fabricnlp
spec:
  containers:
  - image: healthcatalyst/fabric.mysqlclient:latest
    # command:
    #   - sleep
    #   - "3600"
    # # this overrides the CMD command in docker
    args: ["sleep"]
    imagePullPolicy: Always
    name: mysqlclient
    volumeMounts:
      - name: mysql-persistent-storage-backup
        # point the /var/lib/mysql folder inside the container to the volume called mysql-persistent-storage
        mountPath: /var/lib/mysql
        subPath: mysqlbackups              
  volumes:
  - name: mysql-persistent-storage-backup
    persistentVolumeClaim:
      claimName: az-files-mysql-backup             
    
  restartPolicy: OnFailure
