nlp/nlp-mysql-onprem.yml
# https://github.com/kubernetes/contrib/tree/master/for-demos/proxy-to-service
# https://stackoverflow.com/questions/47057176/how-to-access-kubernetes-service-externally-on-bare-metal-install
# https://github.com/kubernetes/contrib/tree/master/for-demos/proxy-to-service
apiVersion: v1
kind: Pod
metadata:
  name: tcp-proxy-mysql
  namespace: fabricnlp  
spec:
  # hostPort is broken on CNI (https://github.com/kubernetes/kubernetes/issues/31307) we have to use hostNetwork where CNI is used
  hostNetwork: true    
  # run on master node so we use the IP of the master
  # https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
  # https://ekartco.com/2017/09/kubernetes-make-pods-run-on-your-master-nodes/
  nodeSelector:
    node-role.kubernetes.io/master: ""
  # https://stackoverflow.com/questions/41999756/how-to-force-pods-deployments-to-master-nodes
  # https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
  tolerations:
  - key: node-role.kubernetes.io/master
    operator: Exists
    effect: NoSchedule
  containers:
  - name: proxy-tcp
    image: healthcatalyst/tcp-proxy:latest
    args: [ "tcp", "3306", "mysqlserver" ]
    ports:
    - name: tcp
      protocol: TCP
      containerPort: 3306
