nlp/test.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-azurefile
  namespace: fabricnlp
spec:
  containers:
  - image: nginx
    name: nginx-azurefile
    command:
    - "/bin/sh"
    - "-c"
    - while true; do echo $(date) >> /mnt/blobfile/outfile; sleep 1; done
    volumeMounts:
    - name: blobfile01
      mountPath: "/mnt/blobfile"
  volumes:
  - name: blobfile01
    persistentVolumeClaim:
      claimName: pvc-azurefile
---
# Solr pod
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: fabric.nlp.solrserver
  namespace: fabricnlp    
  labels:
    app: solrserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solrserver
  template:
    metadata:
      labels:
        app: solrserver
    spec:
      containers:
        - name: solrserver
          image: healthcatalyst/fabric.nlp.docker.solr:latest
          #imagePullPolicy: Always          
          volumeMounts:
            - name: solr-persistent-storage
              mountPath: /var/lib/solr
              subPath: solr
          ports:
            - containerPort: 8085
              name: solr
      volumes:
      - name: solr-persistent-storage
        persistentVolumeClaim:
          claimName: az-files-solr            
---
# MySql pod
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
# name for this pod
  name: mysqlserver
# namespace for this pod
  namespace: fabricnlp  
  labels:
    app: mysqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqlserver
  template:
    metadata:
      labels:
        app: mysqlserver
    spec:
      containers:
        # name of this container in the pod
        - name: mysqlserver
          # image to pull
          image: healthcatalyst/fabric.nlp.docker.mysql:latest
          # specify to always pull a new image
          #imagePullPolicy: Always
          # environment variables
          ports:
            # expose port 3306
            - containerPort: 3306
              # name of the port
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage2
              # point the /var/lib/mysql folder inside the container to the volume called mysql-persistent-storage
              mountPath: /var/lib/mysql
              subPath: mysql              
            - name: mysql-persistent-storage
              # point the /var/lib/mysql folder inside the container to the volume called mysql-persistent-storage
              mountPath: /data/mysql2
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /data/mysql          
      - name: mysql-persistent-storage2
        persistentVolumeClaim:
          claimName: az-files-mysql            
---
