nlp/nlp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nlp-ingress
    namespace: fabricnlp
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
    - host: solr.CUSTOMERID.healthcatalyst.net
      http:
          paths:
          - backend:
            serviceName: solrserverpublic
            servicePort: 80
    - host: nlp.CUSTOMERID.healthcatalyst.net
      http:
          paths:
          - backend:
            serviceName: nlpserverpublic
            servicePort: 80
    - host: nlpjobs.CUSTOMERID.healthcatalyst.net
      http:
          paths:
          - backend:
            serviceName: nlpjobsserverpublic
            servicePort: 80
---
